--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body #table {
 #tbody tr th:nth-child(3) {
   width: 5%; }
 
-#tbody tr th:nth-child(3) button {
+#tbody tr td:nth-child(3) button {
   margin-left: 2%; }
 
 /*# sourceMappingURL=style.css.map */
